fix overlapped expand search link in Chrome

--- a/sass/elements/_custom_search_elements.scss
+++ b/sass/elements/_custom_search_elements.scss
@@ -7,7 +7,7 @@ form#search-block-form fieldset#edit-advanced {
   /* background-color: $light_grey1; */
   margin-bottom: 0em;
   &.toggled {
-    margin-bottom: -3em;
+    margin-bottom: 0em;
   }
 }
 
@@ -36,6 +36,7 @@ div#search-advanced {
   @include border-radius(5px);
   background-color: $light_grey1;
   padding: 1% 2%;
+  display: block;
 }
 
 div#search-advanced-panel {
