--- a/sass/elements/_global_elements.scss
+++ b/sass/elements/_global_elements.scss
@@ -51,10 +51,8 @@ body.page-reservation {
   background: $light_grey1;
 }
 
-
-
 .lift-columns #columns {
-  margin-top: -112px;
+  margin-top: -36px;
 }
 
 #footer-wrapper {
